# Parallel_Programming_Demo

./: README.md
Demo_CUDA_Clion_Remote/: CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  main.cu
Demo_CUDA_Clion_Remote/.cmake/api/v1/reply/: cache-v2-c8a6cd41c746bb8e795f.json  cmakeFiles-v1-7cb9c617e67a5e41adbf.json  codemodel-v2-8bd94dc4668c2ee4a84d.json  index-2023-04-10T05-27-14-0303.json  target-demo-Debug-00cb84e8fb80980f08e5.json  toolchains-v1-ec2ed4da3cfa612145c1.json
Demo_CUDA_VScode_Remote/: CMakeLists.txt  test  test.cu
Demo_MPI_Clion_Local/: CMakeLists.txt  main.cpp
Demo_OpenMP_Clion_Local/: CMakeLists.txt  main.cpp
Demo_Pico_C++_Clion_Local/: CMakeLists.txt
